# Full-text-search

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  RunOptions.json  books.csv
client/: fts.py  main.py  run.sh
cmake/: CompileOptions.cmake
include/fts/: bin_index_accessor.hpp  bin_index_writer.hpp  binary_buffer.hpp  binary_reader.hpp  conf_parser.hpp  config.hpp  fts.hpp  i_index_accessor.hpp  i_index_writer.hpp  index_accessor.hpp  index_builder.hpp  index_writer.hpp  indexer.hpp  parser.hpp  query_parser.hpp  replxx_wrapper.hpp  searcher.hpp  text_index_accessor.hpp  text_index_writer.hpp  trie.hpp  word_hash.hpp
include/fts-c/: doc_score.h  index_accessor.h  search_info.h  searcher.h  term_info.h
src/: CMakeLists.txt  main.cxx
src/fts/: CMakeLists.txt  bin_index_accessor.cxx  bin_index_writer.cxx  binary_buffer.cxx  conf_parse.cxx  conf_parser.cxx  config.cxx  fts.cxx  index_accessor.cxx  index_builder.cxx  index_writer.cxx  indexer.cxx  parser.cxx  query_parse.cxx  query_parser.cxx  replxx-wrapper.cxx  replxx_wrapper.cxx  searcher.cxx  text_index_accessor.cxx  text_index_writer.cxx  trie.cxx  word_hash.cxx
src/fts-c/: CMakeLists.txt  index_accessor.cxx  searcher.cxx
src/testapp/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  fts_indexer.cxx  fts_parser.cxx  fts_searcher.cxx  fts_sum.cxx
